[package]
name = "graphify-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Graph assembly and deduplication for graphify"

[dependencies]
graphify-core.workspace = true
tracing.workspace = true
thiserror.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
