[package]
name = "graphify-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AST and semantic extraction engine for graphify"

[dependencies]
graphify-core.workspace = true
graphify-cache.workspace = true
graphify-security.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
regex.workspace = true
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-dart = "0.1"
rayon = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
