[package]
name = "graphify-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for graph queries"

[dependencies]
graphify-core.workspace = true
graphify-analyze.workspace = true
graphify-security.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
